Tue Jul 27 15:52:17 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/QueryCondition/DDS/DDS_Sender/DDS_Sender.mpc:
          Resolve compile issue on Windows.

Tue Jul 27 07:23:54 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/Log_Macros.h:
          Added ace/Log_Msg.h include.

Tue Jul 27 06:29:09 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/docs/DDS4CCM Cheat Sheet.rtf:
          Replaced.

Mon Jul 26 23:16:54 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/LocalityManager/Configuration/Configuration.mpc:

          Windows linker issue.

Mon Jul 26 17:50:42 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/tests/LocalityManager/CPUAffinity/CPUAffinity_exec.cpp:

          Use ACE_OS::num_processors to detect if #cpus is greater than 1.

        * bin/ciao_tests.lst:

          remove MULTICORE from restrictions.

Mon Jul 26 13:40:13 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * tools/XML/XercesString.h:
        * tools/XML/XercesString.cpp:

          Tweak a preprocessor check for MSVC and unicode.

Mon Jul 26 13:01:16 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/DAnCE/DAnCE_Properties.idl:

          Added property for CPU Affinity.

        * DAnCE/LocalityManager/Configuration/CPU_Affinity.cpp:

          Bugfix.

        * DAnCE/tests/LocalityManager/CPUAffinity:
        * DAnCE/tests/LocalityManager/CPUAffinity/CPUAffinity.idl:
        * DAnCE/tests/LocalityManager/CPUAffinity/CPUAffinity.mpc:
        * DAnCE/tests/LocalityManager/CPUAffinity/CPUAffinity_exec.h:
        * DAnCE/tests/LocalityManager/CPUAffinity/CPUAffinity_exec.cpp:
        * DAnCE/tests/LocalityManager/CPUAffinity/Component.cdp:
        * DAnCE/tests/LocalityManager/CPUAffinity/run_test.pl:
        * bin/ciao_tests.lst:

          Added test for CPUAffinity.  Must have MULTICORE set for test