@@ -180,7 +180,7 @@ int clean_up (DDSDomainParticipant * participant)
   return main_result;
 }
 
-int main ()
+int main(int , char *[])
 {
   int                 main_result = 1; /* error by default */
   DDSTopic*           topic = 0;
